<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimplyOcean</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="profile">我的</string>
    <string name="setting">设置</string>

    
    <!-- 分类列表 -->
    <string name="recommend">推荐</string>
    <string name="seafood">海鲜</string>
    <string name="beef">牛肉</string>
    <string name="sauce">酱料</string>
    <string name="wine">酒水</string>
    
    <!--商品列表页 -->
    <string name="shopping_cart">购物车</string>
    <string name="product_pic">商品图片</string>
    <string name="show_details">显示详情</string>
    <string name="purchase">立即购买</string>
    <string name="defult_qty">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    
    <!--商品详情页 -->
    <string name="add_to_cart">加入购物车</string>
    
    <!-- 支付页面 -->
    <string name="loading">loading&#8230;</string>
    <string name="order_number">订单号</string>
    <string name="qrcode">二维码</string>
    
    <!-- 购物车页面 -->
	<string name="delete_product">删除商品</string>
	<string name="pay">付款</string>
	<string name="empty_cart">购物车为空</string>
    <string name="shop_now">马上选购</string>
    
    <!-- 登录页面 -->
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="close">关闭</string>
    <string name="registry">注册</string>
    
    <!-- 注册页面 -->
    <string name="reg_phone">请输入手机号码</string>
    <string name="reg_password">请设置登录密码</string>
    <string name="reg_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="reg_now">立即注册</string>
    <string name="back_to_login">返回登录</string>
    <string name="agree">已阅读并同意</string>
    <string name="policy">使用条款和隐私政策</string>
    
    <!-- 设置 -->
    <string name="recommend_to_weixin_friend">推荐给微信好友</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="app_recommend">应用推荐</string>
    <string name="clear_cache">清除缓存</string>
    <string name="mobile_number">手机号</string>
    <string name="mobile_number_hint">方便我们尽快反馈</string>
    <string name="content_edit_hint">欢迎在这儿发表宝贵的意见哦~</string>
    
	
</resources>
