<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- title bar -->

    <include layout="@layout/title_bar" />

    <ImageButton
        android:id="@+id/seafoodGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="0.33"
        android:contentDescription="@string/seafood"
        android:src="@drawable/grid_seafood" />

    <ImageButton
        android:id="@+id/beefGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="0.33"
        android:contentDescription="@string/beef"
        android:src="@drawable/grid_beef" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="0.34" >

        <ImageButton
            android:id="@+id/wineGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/wine"
            android:src="@drawable/grid_wine"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/sauceGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/sauce"
            android:src="@drawable/grid_sauce" />
    </LinearLayout>

</LinearLayout>