<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/app_bg">

    <!-- title bar -->
    <include 
        android:id="@+id/title_bar"
        layout="@layout/title_bar"/>
    
    <com.android.volley.toolbox.NetworkImageView
	    android:id="@+id/product_image"
	    android:layout_width="70dp"
	    android:layout_height="70dp" 
	    android:scaleType="centerCrop"
	    android:layout_below="@id/title_bar"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
	    android:contentDescription="@string/product_pic" />
    
   <TextView
        android:id="@+id/product_id"
        android:layout_below="@id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    
    <TextView
        android:id="@+id/product_name"
        android:layout_below="@id/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    
   <TextView
        android:id="@+id/product_price"
        android:layout_below="@id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    
  <TextView
        android:id="@+id/product_description"
        android:layout_below="@id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

  <TextView
        android:id="@+id/product_inventory"
        android:layout_below="@id/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

  
  	<Button
	    android:id="@+id/minus"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="45dp"
	    android:layout_height="45dp"
	    android:layout_alignBaseline="@+id/product_qty"   
		android:layout_above="@+id/add_to_cart"		
	    android:text="@string/minus" />
  
    <EditText
	    android:id="@+id/product_qty"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/product_inventory"
	    android:layout_toRightOf="@id/minus"
	    android:ems="10"
	    android:inputType="numberSigned"
	    android:text="@string/defult_qty" >
	    <requestFocus />
	</EditText>
	
	<Button
	    android:id="@+id/plus"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="45dp"
	    android:layout_height="45dp"
	    android:layout_alignBaseline="@+id/product_qty" 
	    android:layout_toRightOf="@id/product_qty"
		android:layout_above="@+id/add_to_cart"	
	    android:text="@string/plus" />

  <Button
      android:id="@+id/add_to_cart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/plus"
      android:layout_below="@+id/product_qty"
      android:layout_alignLeft="@+id/minus"
      android:text="@string/add_to_cart" />
  	
</RelativeLayout>
