<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/app_bg" >

    <!-- title bar -->
    <include 
        android:id="@+id/title_bar"
        layout="@layout/title_bar"/>
    
    <TextView
        android:id="@+id/order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_alignBaseline="@+id/order_number_tag"
        android:layout_alignBottom="@+id/order_number_tag"
        android:layout_marginLeft="37dp"
        android:layout_toRightOf="@+id/order_number_tag"
        android:text="@string/loading" 
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/order_number_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/title_bar"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="21dp"
        android:text="@string/order_number"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/order_number_tag"
        android:layout_below="@+id/order_number_tag"
        android:layout_marginTop="18dp"
        android:text="@string/qrcode" 
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/qrcodeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/order_number"
        android:layout_alignTop="@+id/qrcode" 
        android:contentDescription="@string/qrcode"/>
    
</RelativeLayout>
