<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/app_bg" >
	
        <!-- title bar -->
    <include 
        layout="@layout/title_bar"
        android:id="@+id/titleBar"
        android:layout_alignParentTop="true" />
    
    <RelativeLayout
        android:id="@+id/bottomgrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/goPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay" 
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
		
    </RelativeLayout>
    
    <ListView
        android:id="@+id/produst_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottomgrid"
        android:layout_below="@id/titleBar" >
    </ListView>

    <TextView
        android:id="@+id/empty_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/titleBar"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/empty_cart"
        android:textColor="#000000"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/goShopNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/empty_cart"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:text="@string/shop_now" />



</RelativeLayout>
